    - initial support for sample based instruments in KORG's file format
      (.KMP and .KSF files)

  * AKAI file format:
    - Added Linux/POSIX ported version of libakai. Note that libakai is released
      under LGPL terms while libgig is released under GPL terms. To handle this
      license difference appropriately the AKAI support part is built as
      separate DLL (.so file).

  * src/gig.cpp:
    - bugfix: VCF velocity dynamic range and VCF velocity curve
      weren't saved correctly
    - implemented File::AddDuplicateInstrument()
    - bugfix: negative EG3 depth values were not correctly parsed or
      saved
    - added write support for CtrlTrigger midi rule
    - added read and write support for Legato and Alternator midi
      rules
    - bugfix: sample groups were sometimes created multiple times or with
      wrong textual group name
    - added new method File::AddContentOf() for merging .gig files
    - GIG FORMAT EXTENSION: added additional MIDI controllers for leverage
      controller types (only works with LinuxSampler & gigedit, will not
      work with Gigasampler/GigaStudio)
    - added new method File::GetGroup(String name) for getting group by name
    - added new method Region::GetDimensionDefinition(dimension_t type)
    - bugfix: don't alter region pointer in DimensionRegion::CopyAssign()
    - added some more sanity checks in Region::AddDimension()
    - added new method Region::DeleteDimensionZone(dimension_t, int)
    - added new method Region::SplitDimensionZone(dimension_t, int)
    - Fixed crash caused by Region::GetDimensionRegionByValue() that happened
      with certain velocity split sounds under certain conditions (added bound
      constraints to prevent that)

  * src/DLS.cpp, src/DLS.h:
    - added new method File::GetFileName()
    - fixed minor "memory leak on exception" bug found with cppcheck
    - added new method File::GetExtensionFile(int index)